[package]
name = "edge"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = {version = "0.6.20", features = ["tracing"]}
console-subscriber = "0.2.0"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
tokio = { version = "1.33.0", features = ["full","tracing"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
